--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta property="og:image" content="https://raw.githubusercontent.com/guguguspank/spgd/main/preview.png">
+    <meta property="og:image:alt" content="spg is a sp aeroplane chess game.">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="600">
+    <meta property="og:site_name" content="spigra">
+    <meta property="og:type" content="object">
+    <meta property="og:title" content="spg">
+    <meta property="og:url" content="https://spigra.com/">
+    <meta property="og:description" content="spg is a sp aeroplane chess game.">
     <title>spg</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
